# ccitt_g4_tiff

./: CMakeLists.txt  build.sh  index.html  readme.md  shell.nix
doc/: [chromium-discuss] feat. Group4 image compression.eml
doc/chat/: ChatGPT-TIFF-Support-in-Chromium.md
include/ccitt_g4_tiff/: ccitt_g4.hpp  tiff.hpp
include/tiff_binary/: ccitt_g4.hpp  tiff.hpp
src/: ccitt_g4.cpp
tools/: compress-group4.sh  tiff_cli.cpp
